# MiniLM2

./: .gitignore  README.md  pyproject.toml  requirements.txt
minilm2/: config.py
minilm2/llm/: dataset.py  dataset_embedding.py  dataset_sft.py  eval_pretrained.py  infer_sft.py  lr_schedule.py  model.py  modeling_kimi_linear.py  modeling_ngpt.py  muon.py  sft.py  train.py  train_embedding.py  validate.py
minilm2/utils/: __init__.py  eval_ceval.py  experiments_analyse.py  preprocess_csvsft.py  preprocess_dialogsum.py  preprocess_dialogue.py  preprocess_openwebtext.py  preprocess_wudao.py  preprocess_zhsft.py  show_log.py  test_batch.py  test_dialogue_model.py  test_model.py  test_pretrain_model.py  test_sft_model.py  test_speed.py  test_tokenizer.py  train_tokenizer.py  train_utils.py
models/: chat_template.jinja  defaults.json  embedding_ngpt.json  gpt.json  pretrain_kimi_linear.json  sft_ngpt.json  summarizer.json
models/dialogue/: dialogue.json
models/pretrain/: pretrain.json  pretrain_ngpt.json  pretrain_rwkv_test.json
models/sft/: sft_ngpt.json
models/tokenizers/tokenizer32k/: tokenizer_config.json
models/tokenizers/tokenizer32k_new/: tokenizer.json  tokenizer_config.json  tokenizer_minilm2.py
models/tokenizers/tokenizer64k/: tokenizer_config.json  tokenizer_minilm2.py
models/transformers/ngpt/dialogue0.4b/: README.md
models/transformers/ngpt/pretrain0.4b/: README.md  config.json
models/transformers/ngpt/sft0.4b/: README.md  config.json  tokenizer_config.json
